# xcsp3-converter

./: CMakeLists.txt  README.md
include/: Converter.h  TreeConverter.h
src/: Converter.cc  TreeConverter.cc  main.cc
